studying commit